language/move-lang/tests/move_check/expansion/duplicate_function_in_module.exp
error: 

   ┌── tests/move_check/expansion/duplicate_function_in_module.move:3:9 ───
   │
 3 │     fun foo() { }
   │         ^^^ Duplicate module member or alias 'foo'. Top level names in a module must be unique
   ·
 2 │     fun foo() { }
   │         --- Previously defined here
   │

