language/move-lang/tests/move_check/expansion/duplicate_function_in_module.move
module M {
    fun foo() { }
    fun foo() { }
}
